home layout, fixed dark mode, etc.

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,5 +1,14 @@
 @media screen and (min-width: 900px) {
 
+    :root{
+        --body-color: #E6DBD0;
+        --main-color: #556F44;
+        --secondary-color: #CE2767;
+        --secondary-blue: #335C81;
+        --black: black;
+        --white: white;
+    }
+    
     .navigation{
         max-width: 100%;
     }
@@ -8,45 +17,44 @@
         margin: 0 auto;
     }
 
-    .gap{
+    /* .gap{
         max-width: 100%;
         display: grid;
         grid-template-columns: .5fr 1fr .5fr 1fr .5fr;
         grid-template-rows: 1fr .5fr .5fr .5fr;
         position: relative;
         margin-bottom: 1em;
+    } */
+
+    .gap{
+        max-width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr .5fr .5fr;
+        position: relative;
+        margin-bottom: 1em;
+    }
+    .flexy{
+        display: flex;
+        grid-column: 1/3;
+        grid-row: 3/4;
     }
 
     #hero-section{
-        grid-column: 1/6;
+        grid-column: 1/4;
     }
 
-    #about{
-        grid-column: 2/3;
-        grid-row: 2/3;
-    }
 
     #current-events{
-        grid-column: 4/5;
+        grid-column: 2/3;
         grid-row: 2/3;
         margin: 0 auto;
     }
 
     #weather{
-        grid-column: 3/4;
-        grid-row: 3/4;
+        grid-column: 1/2;
+        grid-row: 2/3;
         margin: 0 auto;
-    }
-
-    #spotlight{
-        grid-column: 2/3;
-        grid-row: 4/5;
-        text-align: center;
-    }
-    
-    #spotlight2{
-        grid-column: 4/5;
-        grid-row: 4/5;
     }
 
     .gap.discoverMain{
@@ -58,7 +66,7 @@
     
     #side{
         grid-column: 1/2;
-        border-right: 5px solid black;
+        border-right: 5px solid var(--black);
         padding: 1em;
     }
 
@@ -67,75 +75,19 @@
     }
 
     .gap.formgrid{
-        grid-template-columns: 2fr 1fr;
+        grid-template-columns: 1.5fr 1fr;
         grid-template-rows: 1fr;
         margin: 0 auto;
     }
 
     #theform{
         grid-column: 1/2;
-        border-right: 5px solid black;
-    }
-
-    fieldset{
-        border: none;
-        padding: 2em;
+        border-right: 5px solid var(--black);
     }
 
     #membershipLevels{
         grid-column: 2/3;
     }
-
-    #centermemberships h1{
-        background-color: black;
-    }
-
-    #centermemberships{
-        text-align: center;
-    }
-
-    #theform h1{
-        background-color: black;
-        text-align: center;
-        margin: 1em;
-    }
-
-    input{
-        display: block;
-        padding: .5rem;
-        font-size: 1.1rem;
-        width: 50%;
-    }
     
-    input[type="radio"]{
-        width: auto;
-    }
-
-    #formButton{
-        background-color: #556F44;
-        color: white;
-        border: none;
-        padding: 1em;
-    }
-
-    label{
-        display: block;
-        margin: .5rem 0;
-    }
-
-    input:invalid{
-        box-shadow: 3px 3px 3px red;
-    }
-
-    #radioslay {
-        display: flex;
-        flex-direction: column;
-      }
-      
-    .plz {
-        display: flex;
-        align-items: center;
-        margin-bottom: 10px;
-      }
       
 }
