--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,12 +1,27 @@
 @media screen and (min-width: 835px){
+    :root{
+        --body-color: #E6DBD0;
+        --main-color: #556F44;
+        --secondary-color: #CE2767;
+        --secondary-blue: #335C81;
+        --black: black;
+        --white: white;
+    }
+
     .gap{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
+        margin-bottom: 10px;
     }
 
     body{
         max-width: 100%;
+    }
+
+    .flexy{
+        display: flex;
+        grid-column: 1/3;
     }
 
     #hero-section{
@@ -17,8 +32,10 @@
         max-width: 100%;
     }
 
-    #about{
+
+    #currentEvents{
         grid-column: 1/3;
+        grid-row: 2/3;
     }
 
     .nav-list {
@@ -65,5 +82,19 @@
 
     .gap.discoverMain{
         display: block;
+    }
+    .gap.formgrid{
+        grid-template-columns: 1.5fr 1fr;
+        grid-template-rows: 1fr;
+        margin: 0 auto;
+    }
+
+    #theform{
+        grid-column: 1/2;
+        border-right: 5px solid var(--black);
+    }
+
+    #membershipLevels{
+        grid-column: 2/3;
     }
 }
